@@ -2,6 +2,7 @@ package com.example.config;
 
 import javax.crypto.SecretKey;
 import java.io.IOException;
+import java.io.InputStream;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.util.Base64;
@@ -9,7 +10,7 @@ import javax.crypto.spec.SecretKeySpec;
 
 public class ClaveSecretaGenerator {
 
-    private static final String SECRET_KEY_FILE = "C:\\Users\\Sebas\\Documents\\NetBeansProjects\\itech\\secret.key";
+    private static final String SECRET_KEY_FILE = "secret.key";
 
     public static SecretKey getSecretKey() {
         SecretKey secretKey = loadSecretKey();
@@ -21,12 +22,15 @@ public class ClaveSecretaGenerator {
     }
 
     private static SecretKey loadSecretKey() {
-        try {
-            byte[] keyBytes = Files.readAllBytes(Paths.get(SECRET_KEY_FILE));
-            return new SecretKeySpec(Base64.getDecoder().decode(keyBytes), "AES");
+        try (InputStream inputStream = ClaveSecretaGenerator.class.getClassLoader().getResourceAsStream(SECRET_KEY_FILE)) {
+            if (inputStream != null) {
+                byte[] keyBytes = inputStream.readAllBytes();
+                return new SecretKeySpec(Base64.getDecoder().decode(keyBytes), "AES");
+            }
         } catch (IOException e) {
-            return null;
+            e.printStackTrace();
         }
+        return null;
     }
 
     private static void saveSecretKey(SecretKey secretKey) {
